# hey

./: ASSISTANTS.md  README.md  indexes.py  main.py  models.py  names.py  pyproject.toml  query.py
generators/: claude.py  tools.py  user.py
tests/: conftest.py  test_query_20250101.py
tests/fixtures/: example_block_tree.py  up_tool_call_result.py
tests/tools/: test_find_20240101.py  test_find_20250101.py  test_index_20250101.py  test_label_20241230.py
tools/: dump.py  equip.py  find.py  fork.py  forks.py  goto.py  label.py  load.py
