[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f5"
version = "0.1.0"
authors = ["James Kassemi"]
description = "An interactive block editor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
